Many changes to creationcards

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ PORT=3001
 # Google Cloud Storage Configuration
 GCS_BUCKET_NAME=demo-app-creationrights
 GCS_KEY_FILE=./key.json
+
+REACT_APP_YOUTUBE_API_KEY=AIzaSyA5Xd89CQhl7Fr2xfCKbGyBUJsdQ_2gv1A
