--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,5 @@ PORT=3001
 GCS_BUCKET_NAME=demo-app-creationrights
 GCS_KEY_FILE=./key.json
 
+APIFY_API_TOKEN=apify_api_IwtubPMgbGcCcfYqFhxy5zNkFKPXF14njt05
 REACT_APP_YOUTUBE_API_KEY=AIzaSyA5Xd89CQhl7Fr2xfCKbGyBUJsdQ_2gv1A
