--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     },
     "dependencies": {
         "@google-cloud/storage": "^6.11.0",
+        "apify-client": "^2.12.1",
+        "axios": "^1.8.4",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
