messaging on artists page is linked properly.

--- a/cra/.env
+++ b/cra/.env
@@ -1,1 +1,2 @@
 REACT_APP_YOUTUBE_API_KEY=AIzaSyA5Xd89CQhl7Fr2xfCKbGyBUJsdQ_2gv1A
+REACT_APP_API_URL=https://creation-rights-server-uef42ajxdq-ue.a.run.app
