Chat functionality working wonderfully.

--- a/cra/public/manifest.json
+++ b/cra/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Creation Rights",
-  "name": "Creation Rights Manager",
+  "name": "Creation Rights",
   "icons": [
     {
       "src": "favicon.ico",
