--- a/cra/package.json
+++ b/cra/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-label": "^2.1.3",
+        "@radix-ui/react-select": "^2.1.7",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-toast": "^1.2.7",
         "@stripe/react-stripe-js": "^3.6.0",
         "@stripe/stripe-js": "^7.0.0",
         "@testing-library/jest-dom": "^5.17.0",
