--- a/cra/package.json
+++ b/cra/package.json
@@ -20,6 +20,7 @@
         "lucide-react": "^0.263.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.5.0",
         "react-scripts": "5.0.1",
         "recharts": "^2.15.1",
         "tailwind-merge": "^2.6.0",
