--- a/cra/package.json
+++ b/cra/package.json
@@ -8,6 +8,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.7",
+        "@radix-ui/react-tooltip": "^1.2.3",
         "@stripe/react-stripe-js": "^3.6.0",
         "@stripe/stripe-js": "^7.0.0",
         "@testing-library/jest-dom": "^5.17.0",
